# phoenix-concordium

./: .gitignore  CHANGELOG.md  Makefile  README.md
.github/workflows/: linter.yml
common-types/: Cargo.toml
common-types/src/: lib.rs
deploy-scripts/: Cargo.toml  README.md  deployments.json
deploy-scripts/src/: deployer.rs  main.rs
dummy-contract/: Cargo.toml  README.md  dummy-contract.wasm.v1  dummy_contract.wasm.v1  dummy_contract.wasm.v1.tar
dummy-contract/src/: lib.rs
multisig/: README.md
oracle-integration/: Cargo.toml  README.md  oracle_integration.wasm.v1
oracle-integration/src/: lib.rs
oracle-integration/tests/: tests.rs
registry/: Cargo.toml  README.md  registry.wasm.v1  registry.wasm.v1.tar
registry/src/: lib.rs
registry/tests/: tests.rs
staking-bank/: Cargo.toml  README.md  staking_bank.wasm.v1  staking_bank.wasm.v1.tar
staking-bank/src/: development_constants.rs  lib.rs  local_constants.rs  production_constants.rs  sandbox_constants.rs
staking-bank/tests/: tests.rs
umbrella-feeds/: Cargo.toml  README.md  umbrella_feeds.wasm.v1  umbrella_feeds.wasm.v1.tar  umbrella_feeds_update.wasm.v1
umbrella-feeds-factory/: Cargo.toml  umbrella_feeds_factory.wasm.v1
umbrella-feeds-factory/src/: lib.rs
umbrella-feeds-reader/: Cargo.toml  README.md  umbrella_feeds_reader.wasm.v1
umbrella-feeds-reader/src/: lib.rs
umbrella-feeds-reader/tests/: tests.rs
umbrella-feeds/src/: lib.rs
umbrella-feeds/tests/: tests.rs
