# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "common-types"
version = "1.0.0"
edition = "2021"
license = "MPL-2.0"
authors = [ "Concordium <developers@concordium.com>" ]
description = "An oracle system"

[features]
default = ["std","u256_amount"]
std = ["concordium-std/std"]
wee_alloc = ["concordium-std/wee_alloc"]
u256_amount = []

[dependencies.primitive-types]
version = "0.11"
default-features = false

[dependencies]
concordium-std = {version = "8.0", default-features = false}

[lib]
crate-type=["cdylib", "rlib"]

[profile.release]
opt-level = "s"
codegen-units = 1
