# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "dummy-contract"
version = "1.0.0"
edition = "2021"
license = "MPL-2.0"
authors = [ "Concordium <developers@concordium.com>" ]
description = "An oracle system. This contract is used only in the integration tests."

[features]
default = ["std"]
std = ["concordium-std/std"]
wee_alloc = ["concordium-std/wee_alloc"]

[dependencies.primitive-types]
version = "0.11"
default-features = false

[dependencies]
concordium-std = {version = "8.0", default-features = false}

[lib]
crate-type=["cdylib", "rlib"]

[profile.release]
opt-level = "s"
codegen-units = 1
