# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "umbrella-feeds-reader"
version = "1.0.0"
edition = "2021"
license = "MPL-2.0"
authors = [ "Concordium <developers@concordium.com>" ]
description = "An oracle system. This umbrella feeds read contract can be used as an interface for the main umbrella feeds contract."

[features]
default = ["std"]
std = ["concordium-std/std"]
wee_alloc = ["concordium-std/wee_alloc"]

[dev-dependencies]
concordium-smart-contract-testing = "3.0"
ed25519-dalek = "1.0.1"
sha256 = "1.4.0"

[dev-dependencies.registry]
path = "../registry/"

[dev-dependencies.staking-bank]
path = "../staking-bank/"

[dev-dependencies.umbrella-feeds]
path = "../umbrella-feeds/"

[dependencies]
concordium-std = {version = "8.0", default-features = false}

[lib]
crate-type=["cdylib", "rlib"]

[profile.release]
opt-level = "s"
codegen-units = 1
