# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "umbrella-feeds"
version = "1.0.0"
edition = "2021"
license = "MPL-2.0"
authors = [ "Concordium <developers@concordium.com>" ]
description = "An oracle system"

[features]
default = ["std","u256_amount"]
std = ["concordium-std/std"]
wee_alloc = ["concordium-std/wee_alloc"]
u256_amount = []

[dev-dependencies]
concordium-smart-contract-testing = "2.0"

#`concordium-smart-contract-testing` uses the below libraries as well. We overwrite them with the ones used 
#in this repository so we can test the newest version of the libraries with the Ci pipelines.
#[patch.crates-io]
#concordium-contracts-common = {path = "../../../concordium-contracts-common/concordium-contracts-common"}
#concordium-contracts-common-derive = {path = "../../../concordium-contracts-common/concordium-contracts-common-derive"}

[dependencies.primitive-types]
version = "0.11"
default-features = false

[dependencies]
concordium-std = {version = "8.0", default-features = false}

[lib]
crate-type=["cdylib", "rlib"]

[profile.release]
opt-level = "s"
codegen-units = 1
