# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "umbrella-feeds"
version = "1.0.0"
edition = "2021"
license = "MPL-2.0"
authors = [ "Concordium <developers@concordium.com>" ]
description = "An oracle system. This umbrella feeds contract contains all the price feeds."

[features]
default = ["std", "u256_amount"]
std = ["concordium-std/std"]
wee_alloc = ["concordium-std/wee_alloc"]
u256_amount = []

[dev-dependencies]
concordium-smart-contract-testing = "3.0"
ed25519-dalek = "1.0.1"
sha256 = "1.4.0"

[dev-dependencies.registry]
path = "../registry/"

[dev-dependencies.staking-bank]
path = "../staking-bank/"

[dependencies]
concordium-std = {version = "8.0", default-features = false}

[lib]
crate-type=["cdylib", "rlib"]

[profile.release]
opt-level = "s"
codegen-units = 1
